# ship2ship-transfer-detector

./: .gitignore  app.py  pyproject.toml
src/gee-export/: export_images.py
src/predict/: predictions.py  predictions_with_land_mask.py
src/preprocess/: calibration.py
src/utils/geolocate/plot/: sar_tiff.py
