[project]
name = "ship2ship-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Vinckevleugel"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api (>=1.5.20,<2.0.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "numpy (==2.2.6)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
